Fix Choices Outline Visibility

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ header {
     padding: 10px;
     margin: auto 20px;
     user-select: none;
+    outline: none;
 }
 
 .choice:hover {
